# n-body

./: .gitignore  README.md  nBodyProblem.ipynb  pyproject.toml
examples/: basic_simulations.py  test_questions.py
src/: __init__.py
src/nbody/: __init__.py  body.py  box.py  constants.py  fast_simulation.py  gadget.py  gnode.py  misc.py  simulation.py  stack.py
tests/: test_closest_distance.py  test_runner.py
